--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Algorithmic Trading: Accelerate Your Learning With Mentorship #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">57 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Are You Living in Truth? Quick Check | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Shifting the Downward Pull to Upward</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -169,7 +169,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -180,7 +180,7 @@
                     <div class="video-info">
                         <h3>Risk Management In Algo Trading Courses - Worth Having?</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -191,7 +191,7 @@
                     <div class="video-info">
                         <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -213,7 +213,7 @@
                     <div class="video-info">
                         <h3>Can You Guess The Movie?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -224,7 +224,7 @@
                     <div class="video-info">
                         <h3>Arthur Visits Bradford😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -235,7 +235,7 @@
                     <div class="video-info">
                         <h3>The Way of Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -345,7 +345,7 @@
                     <div class="video-info">
                         <h3>Can You Guess What He's Thinking?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -587,7 +587,7 @@
                     <div class="video-info">
                         <h3>To know the Ecstasy, you just have to give in to Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2558,7 +2558,7 @@
                     <div class="video-info">
                         <h3>12 YEARS OF SIDEMEN 🥳</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 19, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Algorithmic Trading: Accelerate Your Learning With Mentorship #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">57 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5756,7 +5756,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5767,7 +5767,7 @@
                         <div class="video-info">
                             <h3>Risk Management In Algo Trading Courses - Worth Having?</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5778,7 +5778,7 @@
                         <div class="video-info">
                             <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Are You Living in Truth? Quick Check | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Shifting the Downward Pull to Upward</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>The Way of Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8107,7 +8107,7 @@
                         <div class="video-info">
                             <h3>To know the Ecstasy, you just have to give in to Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Can You Guess The Movie?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Arthur Visits Bradford😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>Can You Guess What He's Thinking?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10859,7 +10859,7 @@
                         <div class="video-info">
                             <h3>12 YEARS OF SIDEMEN 🥳</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 19, 2025</div>
                         </div>
                     </a>
                 </div>
