--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>When the gluten is gone 🍕🔥 #streetfood #pizza</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -169,7 +169,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -191,7 +191,7 @@
                     <div class="video-info">
                         <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -202,7 +202,7 @@
                     <div class="video-info">
                         <h3>Repeat your pre-trade analysis</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -334,7 +334,7 @@
                     <div class="video-info">
                         <h3>These Reddit Recipes are Horrible</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -444,7 +444,7 @@
                     <div class="video-info">
                         <h3>Parents Shouldn’t Live Through Their Children | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -576,7 +576,7 @@
                     <div class="video-info">
                         <h3>Algo Trading Coaching - Here Are The Best In The Business</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -996,7 +996,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR FIRST FESTIVAL MAINSTAGE 🤯 #edm #vikkstar #sidemen #festival #dance #dancemusic</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1069,9 +1069,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=9i1ZNhpR8eM" target="_blank">
-                    <img src="https://i.ytimg.com/vi/9i1ZNhpR8eM/mqdefault.jpg" alt="WE GOT ARRESTED on the WORLD’s MOST EXPENSIVE ROAD TRIP">
+                    <img src="https://i.ytimg.com/vi/9i1ZNhpR8eM/mqdefault.jpg" alt="WE GOT DETAINED on the WORLD’s MOST EXPENSIVE ROAD TRIP">
                     <div class="video-info">
-                        <h3>WE GOT ARRESTED on the WORLD’s MOST EXPENSIVE ROAD TRIP</h3>
+                        <h3>WE GOT DETAINED on the WORLD’s MOST EXPENSIVE ROAD TRIP</h3>
                         <div class="channel">Vikkstar123</div>
                         <div class="date">1 week ago</div>
                     </div>
@@ -5756,7 +5756,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5778,7 +5778,7 @@
                         <div class="video-info">
                             <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5789,7 +5789,7 @@
                         <div class="video-info">
                             <h3>Repeat your pre-trade analysis</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5855,7 +5855,7 @@
                         <div class="video-info">
                             <h3>Algo Trading Coaching - Here Are The Best In The Business</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8019,7 +8019,7 @@
                         <div class="video-info">
                             <h3>Parents Shouldn’t Live Through Their Children | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>When the gluten is gone 🍕🔥 #streetfood #pizza</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>These Reddit Recipes are Horrible</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10452,7 +10452,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR FIRST FESTIVAL MAINSTAGE 🤯 #edm #vikkstar #sidemen #festival #dance #dancemusic</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -10470,9 +10470,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=9i1ZNhpR8eM" target="_blank">
-                        <img src="https://i.ytimg.com/vi/9i1ZNhpR8eM/mqdefault.jpg" alt="WE GOT ARRESTED on the WORLD’s MOST EXPENSIVE ROAD TRIP">
+                        <img src="https://i.ytimg.com/vi/9i1ZNhpR8eM/mqdefault.jpg" alt="WE GOT DETAINED on the WORLD’s MOST EXPENSIVE ROAD TRIP">
                         <div class="video-info">
-                            <h3>WE GOT ARRESTED on the WORLD’s MOST EXPENSIVE ROAD TRIP</h3>
+                            <h3>WE GOT DETAINED on the WORLD’s MOST EXPENSIVE ROAD TRIP</h3>
                             <div class="channel">Vikkstar123</div>
                             <div class="date">1 week ago</div>
                         </div>
