--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Algorithmic Trading: Accelerate Your Learning With Mentorship #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -213,7 +213,7 @@
                     <div class="video-info">
                         <h3>Can You Guess The Movie?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -732,7 +732,7 @@
                     <div class="video-info">
                         <h3>Moving Beyond Religion to Responsibility | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -985,7 +985,7 @@
                     <div class="video-info">
                         <h3>How we made a profitable Bitcoin strategy using ChatGPT</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Algorithmic Trading: Accelerate Your Learning With Mentorship #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -6011,7 +6011,7 @@
                         <div class="video-info">
                             <h3>How we made a profitable Bitcoin strategy using ChatGPT</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -8162,7 +8162,7 @@
                         <div class="video-info">
                             <h3>Moving Beyond Religion to Responsibility | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Can You Guess The Movie?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
